[package]
name = "raytracer"
version = "0.1.0"
authors = ["SherryT <tao_qingxiao@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
imageproc = "0.21.0"
rand = "0.7.3"
threadpool = "1.8"
